Configuracion del router, servicios

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -11,16 +11,18 @@
               <!-- Logo icon --><b>
                   <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
                   <!-- Dark Logo icon -->
-                  <img src="./assets/images/logo-icon.png" alt="homepage" class="dark-logo" />
+
+                  <img src="./assets/images/hospital-dark.png" width="40px" height="40px" alt="homepage" class="dark-logo" />
+
                   <!-- Light Logo icon -->
-                  <img src="./assets/images/logo-light-icon.png" alt="homepage" class="light-logo" />
+                  <img src="./assets/images/hospital-light.png" width="40px" height="40px" alt="homepage" class="light-logo" />
               </b>
               <!--End Logo icon -->
               <!-- Logo text --><span>
                   <!-- dark Logo text -->
-                  <img src="./assets/images/logo-text.png" alt="homepage" class="dark-logo" />
+                  <img src="./assets/images/hospital-app-sin-fondo.png" alt="homepage" class="dark-logo" />
                   <!-- Light Logo text -->
-                  <img src="./assets/images/logo-light-text.png" class="light-logo" alt="homepage" /></span> </a>
+                  <img src="./assets/images/hospital-app-sin-fondo.png" class="light-logo" alt="homepage" /></span> </a>
       </div>
       <!-- ============================================================== -->
       <!-- End Logo -->
@@ -172,9 +174,9 @@
                           <li><a href="#"><i class="ti-wallet"></i> My Balance</a></li>
                           <li><a href="#"><i class="ti-email"></i> Inbox</a></li>
                           <li role="separator" class="divider"></li>
-                          <li><a href="#"><i class="ti-settings"></i> Account Setting</a></li>
+                          <li><a routerLink="/dashboard/account-settings" ><i class="ti-settings"></i> Account Setting</a></li>
                           <li role="separator" class="divider"></li>
-                          <li><a href="#"><i class="fa fa-power-off"></i> Logout</a></li>
+                          <li><a routerLink="/login" ><i class="fa fa-power-off"></i> Logout</a></li>
                       </ul>
                   </div>
               </li>
