--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -13,19 +13,27 @@
                       <li><a href="javascript:void()">My Profile </a></li>
                       <li><a href="javascript:void()">My Balance</a></li>
                       <li><a href="javascript:void()">Inbox</a></li>
-                      <li><a href="javascript:void()">Account Setting</a></li>
-                      <li><a href="javascript:void()">Logout</a></li>
+                      <li><a routerLink="/dashboard/account-settings">Account Setting</a></li>
+                      <li><a routerLink="/login" >Logout</a></li>
                   </ul>
               </li>
               <li class="nav-devider"></li>
               <li class="nav-small-cap">PERSONAL</li>
-              <li> <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-gauge"></i><span class="hide-menu">Dashboard <span class="label label-rouded label-themecolor pull-right">4</span></span></a>
-                  <ul aria-expanded="false" class="collapse">
-                      <li><a href="index.html">Minimal </a></li>
-                      <li><a href="index2.html">Analytical</a></li>
-                      <li><a href="index3.html">Demographical</a></li>
-                      <li><a href="index4.html">Modern</a></li>
-                  </ul>
+
+              <li *ngFor="let items of menuItems" >
+                <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false">
+                  <i class="mdi mdi-gauge"></i>
+                  <span class="hide-menu">{{ items.titulo }}
+                    <span class="label label-rouded label-themecolor pull-right"> {{ items.submenu.length }} </span>
+                  </span>
+                </a>
+
+                <ul aria-expanded="false" class="collapse">
+                    <li *ngFor="let subitem of items.submenu" >
+                      <a [routerLink]="subitem.url"> {{ subitem.titulo }} </a>
+                    </li>
+                </ul>
+
               </li>
 
           </ul>
