--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -30,7 +30,9 @@
 
                 <ul aria-expanded="false" class="collapse">
                     <li *ngFor="let subitem of items.submenu" >
-                      <a [routerLink]="subitem.url"> {{ subitem.titulo }} </a>
+                      <a [routerLink]="subitem.url"
+                      routerLinkActive="active"
+                      [routerLinkActiveOptions]="{ exact: true }"> {{ subitem.titulo }} </a>
                     </li>
                 </ul>
 
