--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,52 +1,68 @@
 <!-- Main wrapper - style you can find in pages.scss -->
 <!-- ============================================================== -->
-<section id="wrapper" class="login-register login-sidebar" style="background-image:url(../assets/images/background/login-register.jpg);">
+<section id="wrapper" class="login-register login-sidebar" style="background-image:url(../assets/images/background/fondo-hosp-login.jpg); width: '2500px'; height: '1413px'; ">
   <div class="login-box card">
       <div class="card-body">
           <form class="form-horizontal form-material"
                 id="loginform"
-                (submit)="login()"
+                autocomplete="off"
+                [formGroup]="loginForm"
+                (ngSubmit)="login()"
           >
-              <a href="javascript:void(0)" class="text-center db"><img src="../assets/images/logo-icon.png" alt="Home" /><br/><img src="../assets/images/logo-text.png" alt="Home" /></a>
+              <a href="javascript:void(0)" class="text-center db"><img src="../assets/images/icon.png" alt="Home" /><br/><img src="../assets/images/hospital-app-sin-fondo.png" alt="Home" /></a>
               <div class="form-group m-t-40">
                   <div class="col-xs-12">
-                      <input class="form-control" type="text" required="" placeholder="Username">
+                      <input class="form-control"
+                       type="text"
+                       placeholder="Correo electrónico"
+                       formControlName="email"
+                      >
                   </div>
               </div>
               <div class="form-group">
                   <div class="col-xs-12">
-                      <input class="form-control" type="password" required="" placeholder="Password">
+                      <input class="form-control"
+                       type="password"
+                       formControlName="password"
+                       placeholder="Password">
                   </div>
               </div>
               <div class="form-group row">
                   <div class="col-md-12">
                       <div class="checkbox checkbox-primary pull-left p-t-0">
-                          <input id="checkbox-signup" type="checkbox" class="filled-in chk-col-light-blue">
-                          <label for="checkbox-signup"> Remember me </label>
+                          <input id="checkbox-signup"
+                          type="checkbox"
+                          class="filled-in chk-col-light-blue"
+                          formControlName="remember"
+                          >
+                          <label for="checkbox-signup"> Recuerdame </label>
                       </div>
-                      <a href="javascript:void(0)" id="to-recover" class="text-dark pull-right"><i class="fa fa-lock m-r-5"></i> Forgot pwd?</a> </div>
+                      <a href="javascript:void(0)" id="to-recover" class="text-dark pull-right"><i class="fa fa-lock m-r-5"></i> Olvidaste tu contraseña?</a> </div>
               </div>
               <div class="form-group text-center m-t-20">
                   <div class="col-xs-12">
-                      <button class="btn btn-info btn-lg btn-block text-uppercase btn-rounded" type="submit">Log In</button>
+                      <button class="btn btn-info btn-lg btn-block text-uppercase btn-rounded" type="submit">Iniciar Sesión</button>
                   </div>
               </div>
               <div class="row">
-                  <div class="col-xs-12 col-sm-12 col-md-12 m-t-10 text-center">
-                      <div class="social"><a href="javascript:void(0)" class="btn  btn-facebook" data-toggle="tooltip" title="Login with Facebook"> <i aria-hidden="true" class="fa fa-facebook"></i> </a> <a href="javascript:void(0)" class="btn btn-googleplus" data-toggle="tooltip" title="Login with Google"> <i aria-hidden="true" class="fa fa-google-plus"></i> </a> </div>
+                  <div class="col-xs-12 col-sm-12 col-md-12 m-t-10 mb-4 text-center" id="google-btn">
+
+
+                    <!-- <div #googleBtn id="my-signin2"></div> -->
+
                   </div>
               </div>
               <div class="form-group m-b-0">
                   <div class="col-sm-12 text-center">
-                      Don't have an account? <a href="pages-register2.html" class="text-primary m-l-5"><b>Sign Up</b></a>
+                      Aún no tienes una cuenta? <a routerLink="/register" class="text-primary m-l-5"><b>Registrarse</b></a>
                   </div>
               </div>
           </form>
           <form class="form-horizontal" id="recoverform" action="index.html">
               <div class="form-group ">
                   <div class="col-xs-12">
-                      <h3>Recover Password</h3>
-                      <p class="text-muted">Enter your Email and instructions will be sent to you! </p>
+                      <h3>Recuperar contraseña</h3>
+                      <p class="text-muted">Coloca tu correo y te llegarán los pasos a seguir! </p>
                   </div>
               </div>
               <div class="form-group ">
