--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -176,7 +176,7 @@
                           <li role="separator" class="divider"></li>
                           <li><a routerLink="/dashboard/account-settings" ><i class="ti-settings"></i> Account Setting</a></li>
                           <li role="separator" class="divider"></li>
-                          <li><a routerLink="/login" ><i class="fa fa-power-off"></i> Logout</a></li>
+                          <li><a (click)="logout()" class="cursor"><i class="fa fa-power-off"></i> Cerrar Sesión </a></li>
                       </ul>
                   </div>
               </li>
