--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -25,7 +25,7 @@
 
               <li *ngFor="let items of menuItems" >
                 <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false">
-                  <i class="mdi mdi-gauge"></i>
+                  <i [class]="items.icono" ></i>
                   <span class="hide-menu">{{ items.titulo }}
                     <span class="label label-rouded label-themecolor pull-right"> {{ items.submenu.length }} </span>
                   </span>
