--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -14,10 +14,10 @@
                   </a>
                   <ul aria-expanded="false" class="collapse">
                       <li><a routerLinkActive="active" routerLink="/dashboard/perfil">Mi Perfil </a></li>
-                      <li><a href="javascript:void()">My Balance</a></li>
-                      <li><a href="javascript:void()">Inbox</a></li>
-                      <li><a routerLink="/dashboard/account-settings">Account Setting</a></li>
-                      <li><a routerLink="/login" >Logout</a></li>
+                      <!-- <li><a href="javascript:void()">My Balance</a></li> -->
+                      <!-- <li><a href="javascript:void()">Inbox</a></li> -->
+                      <li><a routerLink="/dashboard/account-settings">Ajustes de cuenta</a></li>
+                      <li><a routerLink="/login" >Cerrar sesión</a></li>
                   </ul>
               </li>
               <li class="nav-devider"></li>
