--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -44,9 +44,18 @@
               <!-- ============================================================== -->
               <!-- Search -->
               <!-- ============================================================== -->
-              <li class="nav-item hidden-xs-down search-box"> <a class="nav-link hidden-sm-down waves-effect waves-dark" href="javascript:void(0)"><i class="ti-search"></i></a>
-                  <form class="app-search">
-                      <input type="text" class="form-control" placeholder="Search & enter"> <a class="srh-btn"><i class="ti-close"></i></a> </form>
+              <li class="nav-item hidden-xs-down search-box">
+                <a class="nav-link hidden-sm-down waves-effect waves-dark" href="javascript:void(0)">
+                  <i class="ti-search"></i>
+                </a>
+                  <form class="app-search" (submit)="buscar(txtTermino)" >
+                      <input type="text"
+                             class="form-control"
+                             placeholder="Buscar médico, hospital ó usuario"
+                             #txtTermino
+                            >
+                      <a class="srh-btn"><i class="ti-close"></i></a>
+                  </form>
               </li>
               <!-- ============================================================== -->
               <!-- Comment -->
@@ -58,38 +67,38 @@
                   <div class="dropdown-menu dropdown-menu-right mailbox animated fadeIn fast">
                       <ul>
                           <li>
-                              <div class="drop-title">Notifications</div>
+                              <div class="drop-title">Notificaciones</div>
                           </li>
                           <li>
-                              <div class="message-center">
+                              <!-- <div class="message-center"> -->
                                   <!-- Message -->
-                                  <a href="#">
+                                  <!-- <a href="#">
                                       <div class="btn btn-danger btn-circle"><i class="fa fa-link"></i></div>
                                       <div class="mail-contnet">
                                           <h5>Luanch Admin</h5> <span class="mail-desc">Just see the my new admin!</span> <span class="time">9:30 AM</span> </div>
-                                  </a>
+                                  </a> -->
                                   <!-- Message -->
-                                  <a href="#">
+                                  <!-- <a href="#">
                                       <div class="btn btn-success btn-circle"><i class="ti-calendar"></i></div>
                                       <div class="mail-contnet">
                                           <h5>Event today</h5> <span class="mail-desc">Just a reminder that you have event</span> <span class="time">9:10 AM</span> </div>
-                                  </a>
+                                  </a> -->
                                   <!-- Message -->
-                                  <a href="#">
+                                  <!-- <a href="#">
                                       <div class="btn btn-info btn-circle"><i class="ti-settings"></i></div>
                                       <div class="mail-contnet">
                                           <h5>Settings</h5> <span class="mail-desc">You can customize this template as you want</span> <span class="time">9:08 AM</span> </div>
-                                  </a>
+                                  </a> -->
                                   <!-- Message -->
-                                  <a href="#">
+                                  <!-- <a href="#">
                                       <div class="btn btn-primary btn-circle"><i class="ti-user"></i></div>
                                       <div class="mail-contnet">
                                           <h5>Pavan kumar</h5> <span class="mail-desc">Just see the my admin!</span> <span class="time">9:02 AM</span> </div>
-                                  </a>
-                              </div>
+                                  </a> -->
+                              <!-- </div> -->
                           </li>
                           <li>
-                              <a class="nav-link text-center" href="javascript:void(0);"> <strong>Check all notifications</strong> <i class="fa fa-angle-right"></i> </a>
+                              <a class="nav-link text-center" href="javascript:void(0);"> <strong>Ver todas las notificaciones  </strong> <i class="fa fa-angle-right"></i> </a>
                           </li>
                       </ul>
                   </div>
@@ -107,38 +116,42 @@
                   <div class="dropdown-menu mailbox dropdown-menu-right animated fadeIn fast" aria-labelledby="2">
                       <ul>
                           <li>
-                              <div class="drop-title">You have 4 new messages</div>
+                              <div class="drop-title">Mensajes</div>
                           </li>
                           <li>
-                              <div class="message-center">
-                                  <!-- Message -->
-                                  <a href="#">
+                              <!-- <div class="message-center"> -->
+                                  <!--  -->
+                                  <!-- Message #1 -->
+                                  <!--  -->
+                                  <!-- <a href="#">
                                       <div class="user-img"> <img src="./assets/images/users/1.jpg" alt="user" class="img-circle"> <span class="profile-status online pull-right"></span> </div>
                                       <div class="mail-contnet">
                                           <h5>Pavan kumar</h5> <span class="mail-desc">Just see the my admin!</span> <span class="time">9:30 AM</span> </div>
-                                  </a>
+                                  </a> -->
+
+
                                   <!-- Message -->
-                                  <a href="#">
+                                  <!-- <a href="#">
                                       <div class="user-img"> <img src="./assets/images/users/2.jpg" alt="user" class="img-circle"> <span class="profile-status busy pull-right"></span> </div>
                                       <div class="mail-contnet">
                                           <h5>Sonu Nigam</h5> <span class="mail-desc">I've sung a song! See you at</span> <span class="time">9:10 AM</span> </div>
-                                  </a>
+                                  </a> -->
                                   <!-- Message -->
-                                  <a href="#">
+                                  <!-- <a href="#">
                                       <div class="user-img"> <img src="./assets/images/users/3.jpg" alt="user" class="img-circle"> <span class="profile-status away pull-right"></span> </div>
                                       <div class="mail-contnet">
                                           <h5>Arijit Sinh</h5> <span class="mail-desc">I am a singer!</span> <span class="time">9:08 AM</span> </div>
-                                  </a>
+                                  </a> -->
                                   <!-- Message -->
-                                  <a href="#">
+                                  <!-- <a href="#">
                                       <div class="user-img"> <img src="./assets/images/users/4.jpg" alt="user" class="img-circle"> <span class="profile-status offline pull-right"></span> </div>
                                       <div class="mail-contnet">
                                           <h5>Pavan kumar</h5> <span class="mail-desc">Just see the my admin!</span> <span class="time">9:02 AM</span> </div>
-                                  </a>
-                              </div>
+                                  </a> -->
+                              <!-- </div> -->
                           </li>
                           <li>
-                              <a class="nav-link text-center" href="javascript:void(0);"> <strong>See all e-Mails</strong> <i class="fa fa-angle-right"></i> </a>
+                              <a class="nav-link text-center" href="javascript:void(0);"> <strong>Ver todos los mensajes   </strong> <i class="fa fa-angle-right"></i> </a>
                           </li>
                       </ul>
                   </div>
@@ -168,15 +181,17 @@
                                   <div class="u-img"><img [src]="usuario.imagenUrl" alt="user"></div>
                                   <div class="u-text">
                                       <h4> {{ usuario.nombre }} </h4>
-                                      <p class="text-muted">{{ usuario.email }}</p><a href="pages-profile.html" class="btn btn-rounded btn-danger btn-sm">Ver Perfil</a></div>
+                                      <p class="text-muted" style="font-size: 14px;" >{{ usuario.email }}</p>
+                                        <!-- <a routerLink="/dashboard/perfil" class="btn btn-rounded btn-danger btn-sm">Ver Perfil</a> -->
+                                      </div>
                               </div>
                           </li>
                           <li role="separator" class="divider"></li>
                           <li><a routerLink="./perfil"  ><i class="ti-user"></i> Mi Perfil</a></li>
-                          <li><a href="#"><i class="ti-wallet"></i> My Balance</a></li>
-                          <li><a href="#"><i class="ti-email"></i> Inbox</a></li>
+                          <li><a routerLink="/dashboard" ><i class="ti-wallet"></i> Dashboard</a></li>
+                          <!-- <li><a href="#"><i class="ti-email"></i> Inbox</a></li> -->
                           <li role="separator" class="divider"></li>
-                          <li><a routerLink="/dashboard/account-settings" ><i class="ti-settings"></i> Account Setting</a></li>
+                          <li><a routerLink="/dashboard/account-settings" ><i class="ti-settings"></i> Ajustes de cuenta</a></li>
                           <li role="separator" class="divider"></li>
                           <li><a (click)="logout()" class="cursor"><i class="fa fa-power-off"></i> Cerrar Sesión </a></li>
                       </ul>
