Dashboard e implementación final de Gráficos

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,1 +1,30 @@
-<p>dashboard works!</p>
+
+<div class="row">
+
+  <div class="col-4">
+    <h1 class="titleChart" > Total de Usuarios </h1>
+    <div id="divChart1">
+      <canvas id="myChart1"></canvas>
+    </div>
+  </div>
+
+
+  <div class="col-4">
+    <h1 class="titleChart"> Total de Hospitales </h1>
+    <div id="divChart2">
+      <canvas id="myChart2"></canvas>
+    </div>
+  </div>
+
+
+  <div class="col-4">
+    <h1 class="titleChart"> Total de Médicos </h1>
+    <div id="divChart3">
+      <canvas id="myChart3"></canvas>
+    </div>
+  </div>
+
+
+
+</div>
+
