--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -23,7 +23,7 @@
               <li class="nav-devider"></li>
               <li class="nav-small-cap">PERSONAL</li>
 
-              <li *ngFor="let items of menuItems" >
+              <li *ngFor="let items of sidebarService.menu" >
                 <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false">
                   <i [class]="items.icono" ></i>
                   <span class="hide-menu">{{ items.titulo }}
