--- a/src/styles.css
+++ b/src/styles.css
@@ -1,21 +1,30 @@
-.fast {
+
+.fast{
   -webkit-animation-duration: 0.3s;
   animation-duration: 0.3s;
   -webkit-animation-fill-mode:both;
-  animation-fill-mode:both;
+  animation-fill-mode:both
 }
 
-#themecolors .selector {
+#themecolors .selector, .cursor {
   cursor: pointer;
 }
 
-.cursor {
-  cursor: pointer;
+
+#google-btn {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  text-align: center;
 }
 
-.img-avatar{
-  height: 300px;
-  width: 300px;
+.img-avatar {
+  height: 200px;
+  width: 200px;
+}
+
+.w75 {
+  width: 75px;
 }
 
 .w100 {
@@ -24,6 +33,10 @@
 
 .w140 {
   width: 140px;
+}
+
+.w200 {
+  width: 200px;
 }
 
 .avatar {
